[package]
name = "zorro_cli"
version = "0.0.1"
authors = ["chrisftw", "roxannedunn"]
description = "Use zorro library on the command line."
homepage = "https://github.com/chrisftw/zorro_cli"
documentation = "https://github.com/chrisftw/zorro_cli"
repository = "https://github.com/chrisftw/zorro_cli"
readme = "README.md"
license-file = "LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapp = "0.4.0"
zorro = "0.0.1"
